deployment/cryptoservices/files/namespaces.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: kong

---

apiVersion: v1
kind: Namespace
metadata:
  name: generation-service

---

apiVersion: v1
kind: Namespace
metadata:
  name: pass-service
